fixed the run time error in the patient service implementation